# gitcontext

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  electron-builder.yml  loop.sh  package-lock.json  package.json  task.md
.agents/ralph/: PROMPT_build.md  agents.sh  config.sh  loop.sh
.agents/ralph/references/: CONTEXT_ENGINEERING.md  GUARDRAILS.md
.agents/tasks/: prd-gitcontext.json  prd.json
.codex/ralph-gitcontext/: loop.sh
.codex/ralph-gitcontext/verify/: app-copy-output-tests.md  clipboard-batch-select-comprehensive.md  commit-picker-popover.md  concurrency-util-tests.md  context-footer-tests.md  debounce-util-tests.md  diff-control-bar-comprehensive.md  diff-util-tests.md  error-handling-tests.md  logger-util-tests.md  models-util-tests.md  right-panel-tabs-tests.md  rust-git-diff.md  rust-git-list-files.md  rust-git-read-file.md  (+10 more)
.github/workflows/: ci.yml  deploy.yml  pages.yml  release.yml
.husky/: commit-msg
.ralph/: progress.md
apps/desktop/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: git.rs  lib.rs  main.rs  watcher.rs
apps/web/: playwright.config.ts  vite.config.ts
docker/: Dockerfile  agent-loop.sh  entrypoint.sh
src/electron/: git-service.ts  main.ts  package.json  preload.ts  tsconfig.json
src/web/: package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx
(+133 files in other folders)
